--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "vendor/Promise"]
 	path = vendor/Promise
-	url = git@github.com:amo12937/amo.Promise.git
+	url = git@github.com:sora0077/amo.Promise.git
